--- a/interplay/interplay/templates/base.html
+++ b/interplay/interplay/templates/base.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <title>Interplay</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'styling/base.css' %}">
 </head>
 <body>
-  <main>
-    {% block content %}
-    {% endblock %}
-  </main>
+    <header>
+        <nav class="navbar">
+            <a class="navbar_link" href="/"><img src="{% static 'images/logo.png' %}" id="logo" alt="Interplay Logo"></a>
+            {% if user.is_authenticated %}
+            <a class="navbar_link" href="/profile">Profile</a>
+            {% else %}
+            <a class="navbar_link" href="/accounts/login">Login</a>
+            {% endif %}
+        </nav>
+    </header>
+    <div>
+            {% block content %}
+            {% endblock %}
+    </div>
 </body>
 </html>
