--- a/interplay/interplay/templates/community.html
+++ b/interplay/interplay/templates/community.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
 <head>
-    <meta charset="UTF-8">
-    <title>Community</title>
+	<link rel="stylesheet" href="{% static 'styling/community.css' %}">
 </head>
 <body>
-<h1>Community Page</h1>
+    <div class="container">
+        <h1>Community Page</h1>
+    </div>
 </body>
-</html>
+{% endblock %}
