--- a/interplay/interplay/templates/registration/login.html
+++ b/interplay/interplay/templates/registration/login.html
@@ -1,12 +1,18 @@
 <!-- templates/registration/login.html -->
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %}Login{% endblock %}
 {% block content %}
-<h2>Login</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Log In</button>
-</form>
+<head>
+  <link rel="stylesheet" href="{% static 'styling/login.css' %}">
+</head>
+<div class="container">
+  <h1>Login</h1>
+  <br>
+  <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Log In</button>
+  </form>
+</div>
 {% endblock %}
