added postgreSQL DB, unstaged settings.py which changes default DB, default should remain as sqlite

--- a/interplay/interplay/templates/profile.html
+++ b/interplay/interplay/templates/profile.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>User Profile</h1>
+        <h1>{{ user.username }}</h1>
         <a href="/saved" class="profile_func">See Saved Sequences</a>
         <br>
         <a href="/midi" class="profile_func">Generate New Sequence</a>
