--- a/interplay/interplay/templates/base.html
+++ b/interplay/interplay/templates/base.html
@@ -13,7 +13,7 @@
         <nav class="navbar">
             <a class="navbar_link" href="/"><img src="{% static 'images/logo.png' %}" id="logo" alt="Interplay Logo"></a>
             {% if user.is_authenticated %}
-            <a class="navbar_link" href="/profile">Profile</a>
+            <a class="navbar_link" href="/profile">{{ user.username }}</a>
             {% else %}
             <a class="navbar_link" href="/accounts/login">Login</a>
             {% endif %}
