--- a/interplay/interplay/templates/homepage.html
+++ b/interplay/interplay/templates/homepage.html
@@ -12,16 +12,15 @@
         <p>Upload your own MIDI files to generate new note sequences, built with machine learning algorithms,
             providing you with a new MIDI file to output to your favorite instrument.</p>
     </div>
-
     {% if user.is_authenticated %}
     <div>
-        <p> Hi {{ user.username }}! </p>
+        <p> Hi {{ user.username }} </p>
         <a href="/profile">Go to Profile</a>
         <a href="{% url 'logout' %}">Log Out</a>
     </div>
     {% else %}
     <div>
-        <p>You are not logged in! Login or register to begin...</p>
+        <p>You are not logged in! Login or register to begin.</p>
         <a href="/accounts/login">Login</a>
         <a href="/accounts/register">Register</a>
     </div>
