fixed urls for midi continue page

--- a/interplay/interplay/templates/midi.html
+++ b/interplay/interplay/templates/midi.html
@@ -9,7 +9,7 @@
         <h1>Create New Sequence</h1>
         <a href="#" class="midi_func" id="generate">Generate</a>
         <br>
-        <a href="/continue" class="midi_func" id="continue">Continue</a>
+        <a href="/midi/continue" class="midi_func" id="continue">Continue</a>
         <br>
         <a href="#" class="midi_func" id="interpolate">Interpolate</a>
     </div>
