added parameters for midi generation
started a framework for the magenta system call

--- a/interplay/interplay/static/styling/midi_func.css
+++ b/interplay/interplay/static/styling/midi_func.css
@@ -40,3 +40,15 @@ button {
 #g_upload {
     background-color: #51a8a8;
 }
+
+#melodyBtn {
+    background-color: #51a8a8;
+}
+
+#chordsBtn {
+    background-color: #f2746b;
+}
+
+#drumsBtn {
+    background-color: #f7d977;
+}
