files are now removed from the filesystem after they are uploaded to the db. files are now inserted into the db after they are generated by a magenta function

--- a/interplay/interplay/static/styling/midi.css
+++ b/interplay/interplay/static/styling/midi.css
@@ -34,6 +34,10 @@ a.midi_func {
     background-color: #51a8a8;;
 }
 
+#melodyBtn {
+    background-color: #51a8a8;
+}
+
 .container {
     /* display: flex;
     flex-wrap: nowrap;
