--- a/interplay/interplay/templates/generate.html
+++ b/interplay/interplay/templates/generate.html
@@ -7,13 +7,12 @@
 <body>
 <div class="container">
   <h1>Type Select</h1>
-  <br>
 
+    <a class="midi_func" id='melodyBtn' href="/midi/melody">Melody</a>
   <br>
-
-    <a id='melodyBtn' href="/midi/melody">Melody</a>
-    <button id='chordsBtn' type="submit">Chords</button>
-    <button id='drumsBtn' type="submit">Drums</button>
+    <a class="midi_func" id='chordsBtn' type="submit">Chords</a>
+  <br>
+    <a class="midi_func" id='drumsBtn' type="submit">Drums</a>
 
 </div>
 </body>
