--- a/interplay/interplay/templates/continue.html
+++ b/interplay/interplay/templates/continue.html
@@ -1,11 +1,21 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
+<head>
+    <link rel="stylesheet" href="{% static 'styling/midi_func.css' %}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+</head>
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Upload</button>
   </form>
 
+  <p id="midi_data"></p>
+  <script>
+    var data = JSON.parse("{{data|escapejs}}");
+    var dataNode = document.getElementById('midi_data');
+    dataNode.innerHTML+="{{data|escapejs}}";
+  </script>
 
 {% endblock %}
