--- a/interplay/interplay/templates/saved.html
+++ b/interplay/interplay/templates/saved.html
@@ -7,16 +7,17 @@
 <body>
     <div class="container">
         <h1>Saved Sequences Page</h1>
+	<br>
 	<table border = "1">
 		<tr>
-			<th>midi</th>
+<!--				<th>midi</th>-->
 			<th>user</th>
 			<th>source</th>
 			<th>name</th>
 		</tr>
 		{% for result in data%}
 		<tr>
-			<td>{{result.midi}}</td>
+<!--				<td>{{result.midi}}</td>-->
 			<td>{{result.user}}</td>
 			<td>{{result.source}}</td>
 			<td>{{result.name}}</td>
