--- a/interplay/interplay/templates/saved.html
+++ b/interplay/interplay/templates/saved.html
@@ -9,17 +9,20 @@
         <h1>Saved Sequences Page</h1>
 	<table border = "1">
 		<tr>
-			<th>midi</th>
+			<th>name</th>
 			<th>user</th>
 			<th>source</th>
-			<th>name</th>
 		</tr>
 		{% for result in data%}
 		<tr>
-			<td>{{result.midi}}</td>
+			<td>
+				<form method="post">
+					{% csrf_token %}
+					<button name="idNum" type="submit" value={{result.id}}>{{result.name}}</button>
+				</form>
+			</td>
 			<td>{{result.user}}</td>
 			<td>{{result.source}}</td>
-			<td>{{result.name}}</td>
 		</tr>
 		{% endfor %}
 	</table>
