--- a/interplay/interplay/templates/saved.html
+++ b/interplay/interplay/templates/saved.html
@@ -9,17 +9,17 @@
         <h1>Saved Sequences Page</h1>
 		<form method="post">
 			{% csrf_token %}
-	<br>
-			<label for="source">Filter list by source type:</label>
-			<select name="source" id="source"required>
-				<option value="all">All</option>
-        		<option value="generated">Generated</option>
-        		<option value="interpolate">Interpolated Files</option>
-    		</select>
 			<br>
-			<button name="seq_display" type="submit" value="all">Display sequences from all users</button>
-			<button name="seq_display" type="submit" value="user">Display only your sequences</button>
-
+			<div class="container">
+				<label for="source">Filter by Source:</label>
+				<select name="source" id="source"required>
+					<option value="all">All</option>
+					<option value="generated">Generated</option>
+					<option value="interpolate">Interpolated Files</option>
+				</select>
+				<button class='filter_button' name="seq_display" type="submit" value="all">Display All User Sequences</button>
+				<button class='filter_button' name="seq_display" type="submit" value="user">Display Only Your Sequences</button>
+			</div>
 
 	<table border = "1">
 		<tr>
@@ -30,10 +30,8 @@
 		{% for result in data%}
 		<tr>
 			<td>
-
-
-					<button name="idNum" type="submit" value={{result.id}}>{{result.name}}</button>
-				</form>
+					<button class='dl_button' name="idNum" type="submit" value={{result.id}}>{{result.name}}</button>
+			</form>
 			</td>
 			<td>{{result.user}}</td>
 			<td>{{result.source}}</td>
