drum generation, more sequence filtering options

--- a/interplay/interplay/templates/generate.html
+++ b/interplay/interplay/templates/generate.html
@@ -12,7 +12,7 @@
   <br>
     <a class="midi_func" id='chordsBtn' type="submit">Chords</a>
   <br>
-    <a class="midi_func" id='drumsBtn' type="submit">Drums</a>
+    <a class="midi_func" id='drumsBtn' href="/midi/drums">Drums</a>
 
 </div>
 </body>
