--- a/interplay/interplay/templates/generate.html
+++ b/interplay/interplay/templates/generate.html
@@ -10,7 +10,7 @@
 
     <a class="midi_func" id='melodyBtn' href="/midi/melody">Melody</a>
   <br>
-    <a class="midi_func" id='chordsBtn' type="submit">Chords</a>
+    <a class="midi_func" id='chordsBtn' href="/midi/chords">Chords</a>
   <br>
     <a class="midi_func" id='drumsBtn' href="/midi/drums">Drums</a>
 
