--- a/interplay/interplay/templates/saved.html
+++ b/interplay/interplay/templates/saved.html
@@ -15,6 +15,7 @@
 				<select name="source" id="source"required>
 					<option value="all">All</option>
 					<option value="generated-melody">Generated Melody</option>
+					<option value="generated-chords">Generated Chords</option>
 					<option value="generated-drums">Generated Drums</option>
 					<option value="interpolation">Interpolated Files</option>
 				</select>
